--- a/ASMC.Core/ASMC.Core.csproj
+++ b/ASMC.Core/ASMC.Core.csproj
@@ -77,6 +77,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behavior\BindableSelectedItemBeheavior.cs" />
     <Compile Include="Behavior\IsFocesedUI.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="Properties\Annotations.cs" />
