--- a/ASMC.Data.Model/ASMC.Data.Model.csproj
+++ b/ASMC.Data.Model/ASMC.Data.Model.csproj
@@ -55,28 +55,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Asumc\Certificate.cs" />
-    <Compile Include="Asumc\InfluencingCondition.cs" />
-    <Compile Include="Asumc\Interface\ReportMc.cs" />
     <Compile Include="BasicOperation.cs" />
-    <Compile Include="Devises\Parametr\IMeasuredParametr.cs" />
-    <Compile Include="Asumc\VerificationSi.cs" />
-    <Compile Include="CommandArgs.cs" />
-    <Compile Include="Asumc\InformationInCards.cs" />
     <Compile Include="Interface\IBasicOperation.cs" />
     <Compile Include="Interface\IProrgam.cs" />
-    <Compile Include="MapperSetting.cs" />
-    <Compile Include="SettingContext.cs" />
-    <Compile Include="Interface\IParameter.cs" />
-    <Compile Include="Interface\IParametrScada.cs" />
-    <Compile Include="Interface\IProtocol.cs" />
-    <Compile Include="Interface\IRoom.cs" />
-    <Compile Include="Devises\Parametr\Sensor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleScada\Room.cs" />
-    <Compile Include="Asumc\VerificationMi.cs" />
+    <Compile Include="TreeNode.cs" />
     <Compile Include="UserItemOperation.cs" />
-    <Compile Include="VerificationProtocol.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AP.Utils\AP.Utils.csproj">
