--- a/Plugins/Test/Test.csproj
+++ b/Plugins/Test/Test.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ASMC.Data.Model\ASMC.Data.Model.csproj">
+    <ProjectReference Include="..\..\ASMC.Data.Model\ASMC.Data.Model.csproj">
       <Project>{F76E5DBB-5041-44C1-9194-6E92AF51B314}</Project>
       <Name>ASMC.Data.Model</Name>
     </ProjectReference>
