--- a/ASMC.Devises/ASMC.Devises.csproj
+++ b/ASMC.Devises/ASMC.Devises.csproj
@@ -39,7 +39,7 @@
       <HintPath>..\packages\MathNet.Numerics.4.7.0\lib\net461\MathNet.Numerics.dll</HintPath>
     </Reference>
     <Reference Include="Palsys.Data.Model">
-      <HintPath>..\..\..\..\ASU MS 7\Старые библиотеки, не удалять\Palsys.Data.Model.dll</HintPath>
+      <HintPath>..\packages\Старые библиотеки, не удалять\Palsys.Data.Model.dll</HintPath>
     </Reference>
     <Reference Include="Palsys.Utils, Version=7.0.1900.1199, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -77,9 +77,21 @@
       <Project>{FF877F85-43B8-4779-A822-A2904ADC1100}</Project>
       <Name>AP.Utils</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ASMC.Core\ASMC.Core.csproj">
+      <Project>{adb547eb-33aa-4c07-a493-c80729632a8b}</Project>
+      <Name>ASMC.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ASMC.Data.Model\ASMC.Data.Model.csproj">
       <Project>{f76e5dbb-5041-44c1-9194-6e92af51b314}</Project>
       <Name>ASMC.Data.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ASMC.Data\ASMC.Data.csproj">
+      <Project>{f7a7d56c-239c-477b-aed2-8269c9a7a2ea}</Project>
+      <Name>ASMC.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ASMC\ASMC.csproj">
+      <Project>{0f3a4bf6-b35c-4f85-80f2-a756f3495a77}</Project>
+      <Name>ASMC</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
