--- a/Plugins/B5-71-2-PRO/B5-71-2-PRO.csproj
+++ b/Plugins/B5-71-2-PRO/B5-71-2-PRO.csproj
@@ -66,9 +66,15 @@
       <Project>{c606fa94-0b7e-4698-801f-206ca9da0cef}</Project>
       <Name>ASMC.Devices</Name>
     </ProjectReference>
+    <ProjectReference Include="..\B5-71-PRO_Abstract\B5-71-PRO_Abstract.csproj">
+      <Project>{9E15A5E6-F812-4E56-BF83-2B5C0D247F96}</Project>
+      <Name>B5-71-PRO_Abstract</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetPath)" "$(SolutionDir)\ASMC\bin\Debug\Plugins" /Y</PostBuildEvent>
+    <PostBuildEvent>mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\" 2&gt; NUL
+xcopy "$(TargetPath)" "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\" /Y
+mkdir "$(SolutionDir)ASMC\bin\$(ConfigurationName)\Plugins\$(TargetName)\Resources\" 2&gt; NUL</PostBuildEvent>
   </PropertyGroup>
 </Project>
