--- a/ASMC/App.config
+++ b/ASMC/App.config
@@ -8,7 +8,7 @@
     </startup>
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd" autoReload="false" throwExceptions="false" internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
     <targets>
-      <target xsi:type="File" maxArchiveFiles="5" archiveEvery="Hour" name="logDebug" fileName="${specialfolder:folder=ApplicationData}\ASMC\logs\Debug\${shortdate}.log" layout="[${longdate}] ${processname} ${processid} ${level} ${logger} ${message}"/>
+      <target xsi:type="File" maxArchiveFiles="5" archiveEvery="Hour" name="logDebug" fileName="${specialfolder:folder=ApplicationData}\ASMC\logs\Debug\${shortdate}.log" layout="[${longdate}] ${processname} ${processid} ${level} ${logger} ${message}" />
 	  <target xsi:type="File" maxArchiveFiles="14" archiveEvery="Day" name="logError" fileName="${specialfolder:folder=ApplicationData}\ASMC\logs\Error\${shortdate}.log" layout="[${longdate}] ${processname} ${processid} ${level} ${logger} ${message}" />
 	  <target xsi:type="File" maxArchiveFiles="7" archiveEvery="Day" name="logInfo" fileName="${specialfolder:folder=ApplicationData}\ASMC\logs\${shortdate}.log" layout="[${longdate}] ${processname} ${processid} ${level} ${logger} ${message}" />
     </targets>
@@ -22,11 +22,15 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="8fb06cb64d019a17" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.9.1.0" newVersion="2.9.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.11.3.0" newVersion="2.11.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ExcelNumberFormat" publicKeyToken="23c6f5d73be07eca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.10.0" newVersion="1.0.10.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
