--- a/Plugins/B5-71-2-PRO/app.config
+++ b/Plugins/B5-71-2-PRO/app.config
@@ -8,11 +8,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="DocumentFormat.OpenXml" publicKeyToken="8fb06cb64d019a17" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.9.1.0" newVersion="2.9.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.11.3.0" newVersion="2.11.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Accord" publicKeyToken="fa1a88e29555ccf7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.8.2.0" newVersion="3.8.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ExcelNumberFormat" publicKeyToken="23c6f5d73be07eca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.10.0" newVersion="1.0.10.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
