--- a/Plugins/APPA/APPA-107N-109N/APPA-107N-109NBasePlugin.csproj
+++ b/Plugins/APPA/APPA-107N-109N/APPA-107N-109NBasePlugin.csproj
@@ -89,10 +89,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Resources\appa_10XN_20A_5522A.jpg" />
-    <Content Include="Resources\appa_10XN_A_Aux_5522A.jpg" />
-    <Content Include="Resources\appa_10XN_ma_5522A.jpg" />
-    <Content Include="Resources\appa_10XN_volt_hz_5522A.jpg" />
+    <Resource Include="Resources\appa_10XN_20A_5522A.jpg" />
+    <Resource Include="Resources\appa_10XN_A_Aux_5522A.jpg" />
+    <Resource Include="Resources\appa_10XN_ma_5522A.jpg" />
+    <Resource Include="Resources\appa_10XN_volt_hz_5522A.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
